Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1808

Segfault when validating malformed XML instance ...

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.8.0
    • 3.1.0
    • None
    • Linux/Ubuntu

    Description

      If the following two lines

      // Causes crash when a malformed XML document is validated:
      parser->setExitOnFirstFatalError (false);

      are inserted in SAX2Count.cpp at line 332, a segfault occurs when the program is fed an instance which is not well-formed.

      Attachments

        1. SAX2Count.cpp
          14 kB
          Jacques Legare
        2. simple.xml
          0.2 kB
          Jacques Legare
        3. simple.xsd
          0.5 kB
          Jacques Legare

        Activity

          People

            amassari Alberto Massari
            jacques.legare Jacques Legare
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: