If there is no complex type in the stack, fallback to the schema element definition, like it is done a few lines earlier (XERCESC-1808)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@798905 13f79535-47bb-0310-9956-ffa450edef68